// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MatchItem should render future match correctly 1`] = `
<div
  className="MuiButtonBase-root-21 MuiListItem-root-9 MuiListItem-default-12 MuiListItem-gutters-17 MuiListItem-divider-16 MuiListItem-button-18"
  onBlur={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="MuiListItemText-root-24 Component-text-8 Component-right-6"
  >
    <div>
      Test2
    </div>
    <div
      className="MuiListItemIcon-root-31 Component-icon-4"
    >
      <div
        className="MuiAvatar-root-32 Component-logo-30"
      >
        <img
          className="MuiAvatar-img-34"
          src="https://cdn2.iconfinder.com/data/icons/sport-items-2/512/football_soccer_badge_shield_ball_heraldic-128.png"
        />
      </div>
    </div>
  </div>
  <div
    className="Component-score-7"
  >
    <div
      className="Component-dash-1"
    >
      :
    </div>
  </div>
  <div
    className="MuiListItemText-root-24 Component-text-8"
  >
    <div
      className="MuiListItemIcon-root-31"
    >
      <div
        className="MuiAvatar-root-32 Component-logo-30"
      >
        <img
          className="MuiAvatar-img-34"
          src="https://cdn2.iconfinder.com/data/icons/sport-items-2/512/football_soccer_badge_shield_ball_heraldic-128.png"
        />
      </div>
    </div>
    <div>
      Test1
    </div>
  </div>
  <span
    className="MuiTouchRipple-root-35"
  />
</div>
`;

exports[`MatchItem should render played match correctly 1`] = `
<div
  className="MuiButtonBase-root-21 MuiListItem-root-9 MuiListItem-default-12 MuiListItem-gutters-17 MuiListItem-divider-16 MuiListItem-button-18"
  onBlur={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="MuiListItemText-root-24 Component-text-8 Component-right-6"
  >
    <div>
      Test2
    </div>
    <div
      className="MuiListItemIcon-root-31 Component-icon-4"
    >
      <div
        className="MuiAvatar-root-32 Component-logo-30"
      >
        <img
          className="MuiAvatar-img-34"
          src="https://cdn2.iconfinder.com/data/icons/sport-items-2/512/football_soccer_badge_shield_ball_heraldic-128.png"
        />
      </div>
    </div>
  </div>
  <div
    className="Component-score-7 Component-green-3"
  >
    <div>
      2
    </div>
    <div
      className="Component-dash-1"
    >
      :
    </div>
    <div>
      1
    </div>
  </div>
  <div
    className="MuiListItemText-root-24 Component-text-8"
  >
    <div
      className="MuiListItemIcon-root-31"
    >
      <div
        className="MuiAvatar-root-32 Component-logo-30"
      >
        <img
          className="MuiAvatar-img-34"
          src="https://cdn2.iconfinder.com/data/icons/sport-items-2/512/football_soccer_badge_shield_ball_heraldic-128.png"
        />
      </div>
    </div>
    <div>
      Test1
    </div>
  </div>
  <span
    className="MuiTouchRipple-root-35"
  />
</div>
`;

exports[`MatchItem should render predicted wrong match correctly 1`] = `
<div
  className="MuiButtonBase-root-21 MuiListItem-root-9 MuiListItem-default-12 MuiListItem-gutters-17 MuiListItem-divider-16 MuiListItem-button-18"
  onBlur={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="MuiListItemText-root-24 Component-text-8 Component-right-6"
  >
    <div>
      Test2
    </div>
    <div
      className="MuiListItemIcon-root-31 Component-icon-4"
    >
      <div
        className="MuiAvatar-root-32 Component-logo-30"
      >
        <img
          className="MuiAvatar-img-34"
          src="https://cdn2.iconfinder.com/data/icons/sport-items-2/512/football_soccer_badge_shield_ball_heraldic-128.png"
        />
      </div>
    </div>
  </div>
  <div
    className="Component-score-7 Component-red-5"
  >
    <div>
      2
    </div>
    <div
      className="Component-dash-1"
    >
      :
    </div>
    <div>
      1
    </div>
  </div>
  <div
    className="MuiListItemText-root-24 Component-text-8"
  >
    <div
      className="MuiListItemIcon-root-31"
    >
      <div
        className="MuiAvatar-root-32 Component-logo-30"
      >
        <img
          className="MuiAvatar-img-34"
          src="https://cdn2.iconfinder.com/data/icons/sport-items-2/512/football_soccer_badge_shield_ball_heraldic-128.png"
        />
      </div>
    </div>
    <div>
      Test1
    </div>
  </div>
  <span
    className="MuiTouchRipple-root-35"
  />
</div>
`;
